--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
-  "name": "matching",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev":"ts-node-dev ./src/index.ts"
+    "build": "tsc",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ts-node-dev": "^1.0.0-pre.63"
+    "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "supertest": "^6.0.1",
+    "ts-node-dev": "^1.0.0",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.6",
+    "@types/supertest": "^2.0.10",
+    "cross-env": "^7.0.2",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
 }
